option java_package = "com.chuangyou.common.protobuf.pb.army";
option java_outer_classname = "ArmyInfoReloadMsgProto";
import "player/PostionMsg.proto";
import "army/PropertyMsg.proto";
message ArmyInfoReloadMsg {
	repeated PropertyMsg propertys = 1; //属性回写
	optional PostionMsg postion = 2; //位置回写
}

